Fix: feedback html required non visibile

--- a/src/scss/custom/_forms.scss
+++ b/src/scss/custom/_forms.scss
@@ -203,7 +203,7 @@ textarea {
   [type='checkbox'],
   [type='radio'] {
     position: absolute;
-    left: -9999px;
+    opacity: 0;
 
     + label {
       position: relative;
